Try to use Xcode 11

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           mkdir build
           cd build
+          xcversion select 11.7
           cmake ..
       - name: Build
         run: |
