--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -29,7 +29,22 @@ jobs:
           cmake --build . --config RelWithDebInfo
       - name: Artifact
         uses: actions/upload-artifact@v2
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
         with:
           name: MacOS SDK
           path: |
             build/FreeOrionSDK_*.tar.bz2
+      - name: Prepare Release
+        if: startsWith(github.ref, 'refs/tags/v')
+        id: prepare-release-options
+        run: |
+          echo "::set-output name=release-name::$(git tag -ln --format '%(subject)' ${{ github.ref_name }})"
+      - uses: softprops/action-gh-release@v1
+        name: Release
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          name: ${{ steps.prepare-release-options.outputs.release-name }}
+          draft: true
+          files: |
+            build/FreeOrionSDK_*.tar.bz2
+          token: ${{ secrets.RELEASE_TOKEN }}
