--- a/.github/workflows/android-macos-python.yml
+++ b/.github/workflows/android-macos-python.yml
@@ -51,7 +51,7 @@ jobs:
       shell: cmake -P {0}
       run: |
         include(Version.cmake)
-        message("::set-output name=dist-version::${DIST_VERSION}")
+        file(APPEND "$ENV{GITHUB_OUTPUT}" "dist-version=${DIST_VERSION}")
 
     - uses: actions/cache@v2
       id: avd-cache
@@ -163,7 +163,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/v')
       id: prepare-release-options
       run: |
-        echo "::set-output name=release-name::$(git tag -ln --format '%(subject)' ${{ github.ref_name }})"
+        echo "release-name=$(git tag -ln --format '%(subject)' ${{ github.ref_name }})" >> $GITHUB_OUTPUT
     - uses: softprops/action-gh-release@v1
       name: Release
       if: startsWith(github.ref, 'refs/tags/v')
