--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -38,7 +38,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         id: prepare-release-options
         run: |
-          echo "::set-output name=release-name::$(git tag -ln --format '%(subject)' ${{ github.ref_name }})"
+          echo "release-name=$(git tag -ln --format '%(subject)' ${{ github.ref_name }})" >> $GITHUB_OUTPUT
       - uses: softprops/action-gh-release@v1
         name: Release
         if: startsWith(github.ref, 'refs/tags/v')
