Disable Python framework on MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,8 +229,8 @@ if(WIN32)
     )
     set(PYTHON3_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
 else()
-    set(PYTHON3_CONFIGURE_FLAGS "-DBUILD_FRAMEWORK=ON")
-    set(PYTHON3_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR}/Frameworks)
+    set(PYTHON3_CONFIGURE_FLAGS "-DBUILD_FRAMEWORK=OFF")
+    set(PYTHON3_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
 endif()
 
 ExternalProject_PatchSet(python3 PYTHON3_PATCHSET)
@@ -585,7 +585,7 @@ else()
 endif()
 
 if(APPLE)
-    set(PYTHON3_INSTALL_DIR ${SDK_INSTALL_DIR}/Frameworks/Python.framework/Versions/${PYTHON3_VERSION})
+    set(PYTHON3_INSTALL_DIR ${SDK_INSTALL_DIR})
 else()
     set(PYTHON3_INSTALL_DIR ${SDK_INSTALL_DIR})
 endif()
