Update SDK's Python to 3.9.10 same as Android's SDK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -290,6 +290,7 @@ ExternalProject_Add(python3
         -DENABLE_JSON=OFF
         -DENABLE_LINUXAUDIODEV=OFF
         -DENABLE_MMAP=OFF
+        -DENABLE_MSI=OFF
         -DENABLE_MULTIBYTECODEC=OFF
         -DENABLE_MULTIPROCESSING=OFF
         -DENABLE_NIS=OFF
