Build Python extension as built-in on MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,7 +229,10 @@ if(WIN32)
     )
     set(PYTHON3_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
 else()
-    set(PYTHON3_CONFIGURE_FLAGS "-DBUILD_FRAMEWORK=OFF")
+    set(PYTHON3_CONFIGURE_FLAGS
+        -DBUILD_EXTENSIONS_AS_BUILTIN=ON
+        -DBUILD_FRAMEWORK=OFF
+    )
     set(PYTHON3_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
 endif()
 
