Upload python library artifact once for Android

--- a/.github/workflows/android-macos-python.yml
+++ b/.github/workflows/android-macos-python.yml
@@ -156,7 +156,7 @@ jobs:
       with:
         name: python SDK
         path: |
-          python39.zip
+          ${{ matrix.ndk-arch == 'x86_64' && 'python39.zip' || '' }}
           FreeOrionSDK_${{ steps.cmake-dist-version.outputs.dist-version }}_Android-${{ matrix.ndk-arch }}.zip
 
     - name: Prepare Release
