Update SDL to 2.0.14 and output applied patch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ function(ExternalProject_PatchSet TARGET_NAME RESULT)
         else()
             set(${RESULT} ${${RESULT}} COMMAND)
         endif()
+        set(${RESULT} ${${RESULT}} ${CMAKE_COMMAND} -E echo "Appliying patch ${_PATCH} ..." COMMAND)
         set(${RESULT} ${${RESULT}} ${PATCH_EXECUTABLE} -p1 < ${_PATCH})
     endforeach()
     if(NOT ${RESULT})
