Update SDL to 2.0.18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -394,9 +394,9 @@ ExternalProject_Add(sdl
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES_}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
         -DSDL_STATIC=OFF
-        -DDIRECTX=OFF
-        -DRENDER_D3D=OFF
-        -DVIDEO_VULKAN=OFF
+        -DSDL_DIRECTX=OFF
+        -DSDL_RENDER_D3D=OFF
+        -DSDL_VULKAN=OFF
         ${SDL_CONFIGURE_FLAGS}
     INSTALL_DIR ${SDL_CONFIGURE_INSTALL_DIR}
 )
