Update SDL to 2.0.22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -397,6 +397,7 @@ ExternalProject_Add(sdl
         -DSDL_DIRECTX=OFF
         -DSDL_RENDER_D3D=OFF
         -DSDL_VULKAN=OFF
+        -DSDL2_DISABLE_SDL2MAIN=ON
         ${SDL_CONFIGURE_FLAGS}
     INSTALL_DIR ${SDL_CONFIGURE_INSTALL_DIR}
 )
