Try to disable SDL Framework installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -374,9 +374,9 @@ if(WIN32)
 else()
     set(SDL_CONFIGURE_FLAGS
         -DBUILD_SHARED_LIBS=ON
-        -DBUILD_FRAMEWORK=ON
+	-DBUILD_FRAMEWORK=OFF
     )
-    set(SDL_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR}/Frameworks)
+    set(SDL_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
 endif()
 
 ExternalProject_PatchSet(sdl SDL_PATCHSET)
