--- a/.github/workflows/android-macos-python.yml
+++ b/.github/workflows/android-macos-python.yml
@@ -96,8 +96,8 @@ jobs:
 
     - uses: actions/checkout@v3
       with:
-        repository: 'o01eg/python-cmake-buildsystem'
-        ref: 'android-initial-support'
+        repository: 'freeorion/python-cmake-buildsystem'
+        ref: 'eefd46aabb614e2becfed1a15fa7656e4f8411ba'
         path: 'build-python/python-cmake-buildsystem'
 
     - name: run action
