--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-13]
+        os: [macos-15, macos-26]
     env:
       CMAKE_BUILD_PARALLEL_LEVEL: 1
       HOMEBREW_NO_AUTO_UPDATE: 1
@@ -21,7 +21,6 @@ jobs:
         run: |
           mkdir build
           cd build
-          xcodes select 14.1
           cmake -DCMAKE_XCODE_BUILD_SYSTEM=1 ..
       - name: Build
         run: |
