--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -418,9 +418,6 @@ ExternalProject_Add(libogg
     URL_MD5 ${LIBOGG_MD5}
     DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
     ${LIBOGG_PATCHSET}
-    COMMAND ${CMAKE_COMMAND} -E rename
-        <SOURCE_DIR>/configure.in
-        <SOURCE_DIR>/configure.ac
     CMAKE_ARGS
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
         -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
@@ -429,6 +426,7 @@ ExternalProject_Add(libogg
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES_}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DINSTALL_PKG_CONFIG_MODULE=OFF
         ${LIBOGG_CONFIGURE_FLAGS}
     INSTALL_DIR ${LIBOGG_CONFIGURE_INSTALL_DIR}
 )
