Don't install unneeded files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,6 +255,7 @@ ExternalProject_Add(python3
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES_}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
         -DCMAKE_PREFIX_PATH=<INSTALL_DIR>
+		-DINSTALL_MANUAL=OFF
         -DBUILD_LIBPYTHON_SHARED=${BUILD_SHARED_LIBS}
         -DPYTHON_VERSION=${PYTHON3_VERSION}
         ${PYTHON3_CONFIGURE_FLAGS}
@@ -423,6 +424,8 @@ ExternalProject_Add(libogg
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES_}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
         -DINSTALL_PKG_CONFIG_MODULE=OFF
+		-DINSTALL_CMAKE_PACKAGE_MODULE=OFF
+		-DINSTALL_DOCS=OFF
         ${LIBOGG_CONFIGURE_FLAGS}
     INSTALL_DIR ${LIBOGG_CONFIGURE_INSTALL_DIR}
 )
@@ -454,6 +457,7 @@ ExternalProject_Add(libvorbis
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES_}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+		-DINSTALL_CMAKE_PACKAGE_MODULE=OFF
         ${LIBVORBIS_CONFIGURE_FLAGS}
     INSTALL_DIR ${LIBVORBIS_CONFIGURE_INSTALL_DIR}
 )
