Disable libpng framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,6 +193,7 @@ ExternalProject_Add(libpng
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
         -DPNG_SHARED=${PNG_SHARED}
         -DPNG_STATIC=${PNG_STATIC}
+		-DPNG_FRAMEWORK=OFF
         -DPNG_TESTS=OFF
         -DSKIP_INSTALL_EXECUTABLES=ON
         -DSKIP_INSTALL_PROGRAMS=ON
