Force required and disabled dependencies on FreeType

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -356,10 +356,11 @@ ExternalProject_Add(freetype
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES_}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
-        -DWITH_ZLIB=ON
-        -DWITH_PNG=ON
-        -DWITH_BZIP2=OFF
-        -DWITH_HARFBUZZ=OFF
+        -DFT_REQUIRE_ZLIB=ON
+        -DFT_REQUIRE_PNG=ON
+        -DFT_DISABLE_BZIP2=ON
+        -DFT_DISABLE_HARFBUZZ=ON
+        -DFT_DISABLE_BROTLI=ON
     INSTALL_DIR ${SDK_INSTALL_DIR}
 )
 list(APPEND DIST_PACK_TARGETS freetype)
