--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -349,6 +349,8 @@ ExternalProject_Add(freetype
     DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
     ${FREETYPE_PATCHSET}
     CMAKE_ARGS
+        -DCMAKE_PREFIX_PATH=<INSTALL_DIR>
+        -DCMAKE_FIND_FRAMEWORK=NEVER
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
         -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
         -DCMAKE_BUILD_TYPE=Release
