--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,7 +30,17 @@ jobs:
       - name: Build
         run: |
           cd build
-          cmake --build . --config RelWithDebInfo -- /verbosity:d
+          cmake --build . --config RelWithDebInfo --verbose -- /verbosity:diag
+      - name: Upload logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-build-projects-${{ matrix.toolset }}-${{ matrix.arch }}-${{ github.run_number }}
+          path: |
+            build/*.vcxproj
+            build/**/*.rule
+          if-no-files-found: error
+          retention-days: 1
       - name: Artifact
         uses: actions/upload-artifact@v4
         if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
